--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="typedef2">typeDef2</string>
     <string name="typedef">type def</string>
     <string name="type_atq">type atq</string>
+    <string name="play">play</string>
 </resources>
