--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="typedef">type def</string>
     <string name="type_atq">type atq</string>
     <string name="play">play</string>
+    <string name="_0_25x">0.25x</string>
 </resources>
