-Up gradle version -Added next button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="type_atq">type atq</string>
     <string name="play">play</string>
     <string name="_0_25x">0.25x</string>
+    <string name="next">Next</string>
 </resources>
